# home

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py  runtime_metadata.py  web_ui.py
app/auth/: google.py  microsoft.py  token_store.py
app/mcp/: __init__.py  bridge.py  http_server.py  result_models.py  schemas.py  server.py  transport_config.py
app/providers/: base.py  google_provider.py  mock_provider.py  outlook_provider.py
app/safety/: __init__.py  policy.py
app/tools/: __init__.py  calendar_tools.py  contracts.py  deps.py  email_tools.py  serialization.py
docs/llm_wiki/: architecture.md  auth_and_secrets.md  decision_log.md  development_workflow.md  google_provider_preflight.md  handoff.md  index.md  project_context.md  safety_rules.md  source_authority.md  testing.md  tool_contracts.md
scripts/: start_mcp.ps1  start_rest.ps1  start_tunnel_client.ps1
tests/: test_auth.py  test_config.py  test_deps.py  test_error_code_sync.py  test_google_auth.py  test_google_provider.py  test_mcp_http_server.py  test_mcp_output_schema.py  test_mcp_server.py  test_mcp_transport_config.py  test_outlook_provider.py  test_provider_errors.py  test_read_email.py  test_runtime_metadata.py  test_runtime_ux.py  test_safety_policy.py  test_token_refresh.py  test_token_store_namespace.py  test_tools.py
tools/: tunnel_ui_proxy.py
